add users fk
